[workspace]
members = [
    "betree",
    "tests",
    "bectl",
    "julea-sys",
    "julea-betree",
]

resolver = "2"

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.test]
opt-level = 2

[profile.release.package."*"]
debug = false

[profile.release]
debug = true
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
