[workspace]
members = [
    "betree",
    "betree/tests",
    "bectl",
    "julea-sys",
    "julea-betree",
]

resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 2

[profile.release.package."*"]
debug = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
