[package]
name = "bectl"
version = "0.1.0"
authors = ["tilpner <till@hoeppner.ws>"]
edition = "2018"

[dependencies]
betree_storage_stack = { path = "../betree", features = [ "internal-api" ] }
structopt = "0.3"
chrono = "0.4"

jemallocator = { version = "0.3", features = [ "background_threads" ] }

figment = { version = "0.10", features = [ "json" ] }

log = "0.4"
env_logger = "0.8"
error-chain = "0.12"
anyhow = "1.0"

betree_fuse = { path = "../fuse", optional = true }
fuser = { version = "0.7", optional = true }

[features]
default = []
fuse = ["betree_fuse", "fuser"]
