[package]
name = "betree_storage_stack"
version = "0.2.1-alpha"
authors = ["Felix Wiedemann <felix@kann.it>", "Till Hoeppner <betree@tilpner.com>", "Johannes Wünsche <johannes@spacesnek.rocks>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "allocator"
harness = false

[dependencies]
futures = { version = "0.3", features = ["thread-pool"] }
serde = { version = "1.0", features = [ "derive" ] }
bincode = "1.0"
error-chain = "0.12"
thiserror = "1.0"
libc = "0.2"
parking_lot = "0.11"
lock_api = { version = "0.4", features = ["owning_ref", "serde"] }
owning_ref = "0.4"
log = { version = "0.4", features = ["release_max_level_info"] }
byteorder = "1.0"
seqlock = { path = "seqlock/" }
twox-hash = { version = "1.6", features = [ "serde", "serialize" ] }
stable_deref_trait = "1.1"
itertools = "0.10"
env_logger = { version = "0.9", optional = true }
core_affinity = "0.5"
async-trait = "0.1"

lz4-sys = "1.9"
zstd = { version = "0.9", default-features = false }
zstd-safe = { version = "4.0", default-features = false, features = ["experimental"] }

speedy = "0.7"
enum_dispatch = "0.3"

figment = { version = "0.10", optional = true, features = ["env"] }

indexmap = "1.6"
bitvec = "0.22"

serde_json = "1.0"

[dev-dependencies]
rand = "0.8"
rand_xorshift = "0.3"
quickcheck = "1"
quickcheck_macros = "1"
clap = "2.33"
bencher = "0.1"

criterion = "0.3"

[features]
default = ["init_env_logger", "figment_config"]

# unlock unstable API for consumption by bectl and other debugging tools
internal-api = []
init_env_logger = ["env_logger"]
figment_config = ["figment"]
