[package]
name = "betree-perf"
version = "0.1.0"
authors = ["tilpner <betree@tilpner.com>"]
edition = "2018"

[workspace]
members = ["."]

[dependencies]
betree_storage_stack = { path = "..", features = ["experimental-api"]}

structopt = "0.3"
figment = { version = "0.10", features = [ "json" ] }
serde_json = "1"
libmedium = "0.5"
procfs = "0.9"

parking_lot = "0.11"

rand = "0.8"
rand_xoshiro = "0.6"

zip = "0.5"
crossbeam = "0.8"

jemallocator = { version = "0.3", features = ["background_threads"] }
log = "0.4"
