[package]
name = "betree-perf"
version = "0.1.0"
authors = ["tilpner <betree@tilpner.com>"]
edition = "2018"

[workspace]
members = ["."]

[dependencies]
betree_storage_stack = { path = ".." }

structopt = "0.3"
figment = { version = "0.10", features = [ "json", "yaml" ] }
serde_json = "1"
libmedium = "0.7"
procfs = "0.16"
rand = "0.8"
rand_xoshiro = "0.6"
crossbeam = "0.8"
jemallocator = { version = "0.5", features = ["background_threads"] }
log = "0.4"

# Dependent on versions from haura
parking_lot = "0.11"
zip = "0.5"
zipf = "7.0.1"
