[package]
name = "pmdk"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "pmem"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }

[build-dependencies]
bindgen = "0.58.1"
