[tool.poetry]
name = "haura-plots"
version = "0.1.0"
description = "Plotting haura benchmarks."
authors = ["Johannes Wünsche <johannes@spacesnek.rocks>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.6.3"
numpy = "^1.24.1"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
plots = "haura_plots:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
